patch user data endpoint
