# src/validators/user.validators.ts
@@ -8,4 +8,12 @@ export const signupUserSchema = z.object({
 	}),
 });
 
+export const patchUserSchema = z.object({
+	body: z.object({
+		full_name: z.string({ message: "Full Name is required" }).optional(),
+	}),
+});
+
 export type SignupUserBodyData = z.infer<typeof signupUserSchema>["body"];
+
+export type PatchUserBodyData = z.infer<typeof patchUserSchema>["body"];
